--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdk 30
 
     defaultConfig {
-        applicationId "com.moiz.debuglogger"
+        applicationId 'com.moizhassan.debuglogger'
         minSdk 23
         targetSdk 30
         versionCode 2
