--- a/debuglog/build.gradle
+++ b/debuglog/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
-    id 'maven-publish'
+    id 'com.vanniktech.maven.publish' // NEW
 }
 
 android {
@@ -11,10 +11,7 @@ android {
         minSdk 23
         targetSdk 30
         versionCode 2
-        versionName '1.0.1'
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
+        versionName '1.0.0'
     }
 
     buildTypes {
@@ -24,33 +21,15 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_11
     }
 }
 
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.6.0'
-}
-
-afterEvaluate {
-    publishing {
-        publications {
-            // Creates a Maven publication called "release".
-            release(MavenPublication) {
-                // Applies the component for the release build variant.
-                from components.release
-
-                // You can then customize attributes of the publication as shown below.
-                groupId = 'com.moizhassan'
-                artifactId = 'debug_logger'
-                version = '1.0.0'
-            }
-
-        }
-    }
 }
